# nmc_anneal

./: .gitignore  LICENSE  README.md  artifical_experimental_7LiNMR.npz  example4_nmc_sim.npz  pyproject.toml
.github/workflows/: .ci.yml.swp  ci.yml
docs/: algorithms.md  api.md  examples.md  theory.md
examples/: .ex1_parameters.txt.swp  7Li_NMR_Tools.py  7Li_NMR_Tools_Simple.py  CheckStructConvergence.py  GeneratePhaseDiagram.py  MakeLayerFigure.py  Minimal_Example.py  artifical_experimental_7LiNMR.npz  ex1_input.txt  ex1_parameters.txt  ex2_parameters.txt  example1.py  example2.py  example3.py  example4.py  example4_nmc_sim.npz
src/nmc_anneal/: __init__.py
src/nmc_anneal/analysis/: __init__.py  convergence_check.py  get_phase_diagram.py  struct2nmr.py
src/nmc_anneal/core/: anneal_lattice.py  charging_methods.py  config.py  energy_calculations.py  initialize_lattice.py
src/nmc_anneal/io/: parser.py
src/nmc_anneal/viz/: __init__.py  gridplots.py  latt_to_img.py  nmr_gui copy.py  nmr_gui.py  nmr_simpleplot.py
tests/: test_delithiation.py  test_energy_calcs.py  test_initialize_lattice.py  test_parser.py  test_struct_changes.py
