[project]
name = "nmc_anneal"
version = "0.1.0"
description = "Anneal Ni/Mn/Co layered oxide material structures and analyze them"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kris Harris"}
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"


dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
]
viz = ["matplotlib"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"


[tool.black]
line-length = 88

[tool.isort]
profile = "black"
