[project]
name = "nmc_anneal"
version = "0.1.0"
description = "Anneal Ni/Mn/Co layered oxide material structures and analyze them"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kris Harris"}
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"


dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
    "ruff",
    "mypy",
]
viz = ["matplotlib", "pyqt5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"


[tool.black]
line-length = 88

[tool.isort]
profile = "black"


[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
    "B",  # bugbear (common bugs)
    "UP", # pyupgrade
]
lint.ignore = [
    "E501",  # line length handled by black
]


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
